dsitribute slip/__init__.py

--- a/setup.py.in
+++ b/setup.py.in
@@ -3,16 +3,22 @@
 from distutils.core import setup
 
 setup (
+        name = "slip",
+        version = "@VERSION@",
+        py_modules = ["slip.__init__"]
+        )
+
+setup (
         name = "slip.dbus",
         version = "@VERSION@",
         py_modules = [
             "slip.dbus.__init__",
             "slip.dbus.service"
             ]
-   )
+        )
 
 setup (
         name = "slip.gtk",
         version = "@VERSION@",
         py_modules = ["slip.gtk.__init__"]
-   )
+        )
