add polkit and proxy to slip.dbus

--- a/setup.py.in
+++ b/setup.py.in
@@ -13,6 +13,8 @@ setup (
         version = "@VERSION@",
         py_modules = [
             "slip.dbus.__init__",
+            "slip.dbus.polkit",
+            "slip.dbus.proxy",
             "slip.dbus.service"
             ]
         )
