--- a/setup.py.in
+++ b/setup.py.in
@@ -5,7 +5,11 @@ from distutils.core import setup
 setup (
         name = "slip",
         version = "@VERSION@",
-        py_modules = ["slip.__init__"]
+        py_modules = [
+            "slip.__init__",
+            "slip.util.__init__",
+            "slip.util.hookable"
+            ]
         )
 
 setup (
