make example work

--- a/example/org.fedoraproject.slip.example.mechanism.conf
+++ b/example/org.fedoraproject.slip.example.mechanism.conf
@@ -6,6 +6,7 @@
 <busconfig>
   <!-- Only root can own the service -->
   <policy user="root">
-    <allow own="org.fedoraproject.config.example.mechanism"/>
+    <allow own="org.fedoraproject.slip.example.mechanism"/>
+    <allow send_interface="org.fedoraproject.slip.example.mechanism"/>
   </policy>
 </busconfig>
