use PolicyKit version 1.0 if possible (#518996)
slip.dbus.polkit:
- make @enable_proxy decorator a no-op with polkit-1
- make PolKit determine PolicyKit version to be used (can be limited by
  setting PolKit.polkit_valid_versions before first use)
- make IsSystemBusNameAuthorized() method and function return boolean,
  not string value
- remove unused IsProcessAuthorized() method and function

slip.dbus.service:
- deal with PolKit.IsSystemBusNameAuthorized() returning boolean

examples:
- really import slip modules from the source tree if possible
- fix configuration files
- install files in polkit-1 places

--- a/doc/dbus/example/Makefile
+++ b/doc/dbus/example/Makefile
@@ -5,11 +5,19 @@ service_DATA = org.fedoraproject.slip.example.mechanism.service
 confdir = /etc/dbus-1/system.d
 conf_DATA = org.fedoraproject.slip.example.mechanism.conf
 
-policydir = /usr/share/PolicyKit/policy
-policy_DATA = org.fedoraproject.slip.example.policy
+policy0dir = /usr/share/PolicyKit/policy
+policy0_DATA = org.fedoraproject.slip.example.policy
+
+policy1dir = /usr/share/polkit-1/actions
+policy1_DATA = org.fedoraproject.slip.example.policy
 
 libexecdir = /usr/local/libexec
 libexec_SCRIPTS = example-conf-mechanism.py
+
+all:
+	@echo Use "make <target>". Targets are:
+	@echo example_install
+	@echo example_uninstall
 
 example_install:
 	install -d $(libexecdir)
@@ -18,9 +26,11 @@ example_install:
 	install -m0644 $(service_DATA) $(servicedir)
 	install -d $(confdir)
 	install -m0644 $(conf_DATA) $(confdir)
-	install -d $(policydir)
-	install -m0644 $(policy_DATA) $(policydir)
-	-/sbin/restorecon -v -R $(libexecdir) $(servicedir) $(confdir) $(policydir)
+	install -d $(policy0dir)
+	install -m0644 $(policy0_DATA) $(policy0dir)
+	install -d $(policy1dir)
+	install -m0644 $(policy1_DATA) $(policy1dir)
+	-/sbin/restorecon -v -R $(libexecdir) $(servicedir) $(confdir) $(policy0dir) $(policy1dir)
 
 example_uninstall:
 	for p in $(libexec_SCRIPTS); do \
@@ -32,6 +42,9 @@ example_uninstall:
 	for p in $(conf_DATA); do \
 		rm -f "$(confdir)/$$p"; \
 	done
-	for p in $(policy_DATA); do \
-		rm -f "$(policydir)/$$p"; \
+	for p in $(policy0_DATA); do \
+		rm -f "$(policy0dir)/$$p"; \
+	done
+	for p in $(policy1_DATA); do \
+		rm -f "$(policy1dir)/$$p"; \
 	done
