--- a/doc/dbus/example/org.fedoraproject.slip.example.mechanism.conf
+++ b/doc/dbus/example/org.fedoraproject.slip.example.mechanism.conf
@@ -9,4 +9,8 @@
     <allow own="org.fedoraproject.slip.example.mechanism"/>
     <allow send_interface="org.fedoraproject.slip.example.mechanism"/>
   </policy>
+  <!-- Everybody can send to the service -->
+  <policy context="default">
+    <allow send_interface="org.fedoraproject.slip.example.mechanism"/>
+  </policy>
 </busconfig>
