--- a/doc/dbus/example/org.fedoraproject.slip.example.mechanism.conf
+++ b/doc/dbus/example/org.fedoraproject.slip.example.mechanism.conf
@@ -7,10 +7,9 @@
   <!-- Only root can own the service -->
   <policy user="root">
     <allow own="org.fedoraproject.slip.example.mechanism"/>
-    <allow send_interface="org.fedoraproject.slip.example.mechanism"/>
   </policy>
   <!-- Everybody can send to the service -->
   <policy context="default">
-    <allow send_interface="org.fedoraproject.slip.example.mechanism"/>
+    <allow send_destination="org.fedoraproject.slip.example.mechanism"/>
   </policy>
 </busconfig>
