touch dbus policy file after installing
old versions of dbus-daemon seem to read partial policy files while
they are being written, touching the file afterwards will cause them to
re-read it and work properly afterwards

--- a/doc/dbus/example/Makefile
+++ b/doc/dbus/example/Makefile
@@ -26,6 +26,8 @@ example_install:
 	install -m0644 $(service_DATA) $(servicedir)
 	install -d $(confdir)
 	install -m0644 $(conf_DATA) $(confdir)
+	# old dbus daemon versions are stupid
+	touch $(confdir)/$(conf_DATA)
 	install -d $(policy0dir)
 	install -m0644 $(policy0_DATA) $(policy0dir)
 	install -d $(policy1dir)
