--- a/setup.py.in
+++ b/setup.py.in
@@ -1,33 +1,14 @@
 #!/usr/bin/python
+# -*- coding: utf-8 -*-
 
 from distutils.core import setup
 
-setup (
-        name = "slip",
-        version = "@VERSION@",
-        py_modules = [
-            "slip.__init__",
-            "slip.util.__init__",
-            "slip.util.hookable",
-            "slip.util.files"
-            ]
-        )
+setup(name="slip", version="@VERSION@", py_modules=["slip.__init__",
+      "slip.util.__init__", "slip.util.hookable", "slip.util.files"])
 
-setup (
-        name = "slip.dbus",
-        version = "@VERSION@",
-        py_modules = [
-            "slip.dbus.__init__",
-            "slip.dbus.polkit",
-            "slip.dbus.service"
-            ]
-        )
+setup(name="slip.dbus", version="@VERSION@", py_modules=["slip.dbus.__init__",
+      "slip.dbus.polkit", "slip.dbus.service"])
 
-setup (
-        name = "slip.gtk",
-        version = "@VERSION@",
-        py_modules = [
-            "slip.gtk.__init__",
-            "slip.gtk.tools"
-            ]
-        )
+setup(name="slip.gtk", version="@VERSION@", py_modules=["slip.gtk.__init__",
+      "slip.gtk.tools"])
+
