--- a/setup.py.in
+++ b/setup.py.in
@@ -3,13 +3,18 @@
 
 from distutils.core import setup
 
-setup(name="slip", version="@VERSION@", py_modules=["slip.__init__",
-      "slip.util.__init__", "slip.util.hookable", "slip.util.files"])
+setup(name="slip", version="@VERSION@",
+        py_modules=["slip.__init__", "slip.util.__init__",
+            "slip.util.hookable", "slip.util.files"],
+        requires=["selinux"])
 
-setup(name="slip.dbus", version="@VERSION@", py_modules=["slip.dbus.__init__",
-      "slip.dbus.bus", "slip.dbus.constants", "slip.dbus.mainloop",
-      "slip.dbus.polkit", "slip.dbus.proxies", "slip.dbus.service"])
+setup(name="slip.dbus", version="@VERSION@",
+        py_modules=["slip.dbus.__init__", "slip.dbus.bus",
+            "slip.dbus.constants", "slip.dbus.mainloop", "slip.dbus.polkit",
+            "slip.dbus.proxies", "slip.dbus.service"],
+        requires=["dbus", "decorator", "gobject"])
 
-setup(name="slip.gtk", version="@VERSION@", py_modules=["slip.gtk.__init__",
-      "slip.gtk.tools"])
+setup(name="slip.gtk", version="@VERSION@",
+        py_modules=["slip.gtk.__init__", "slip.gtk.tools"],
+        requires=["gtk", "pango"])
 
