use StringIO instead of cStringIO
Using cStringIO somehow breaks parsing dbus introspection data:
dbus.String -> (c)StringIO -> ElementTree.parse()

--- a/setup.py.in
+++ b/setup.py.in
@@ -13,7 +13,7 @@ setup(name="slip.dbus", version="@VERSION@",
             "slip.dbus.constants", "slip.dbus.introspection",
             "slip.dbus.mainloop", "slip.dbus.polkit", "slip.dbus.proxies",
             "slip.dbus.service"],
-        requires=["cStringIO", "dbus", "decorator", "gobject",
+        requires=["dbus", "decorator", "gobject", "StringIO",
             "xml.etree.ElementTree"])
 
 setup(name="slip.gtk", version="@VERSION@",
