dbus: work with either gobject or gi.repository.GObject (pygobject2/3) (cherry picked from commit 66f2953d9418cd3eae43ec0a57343391a733313b)
Conflicts:
	setup.py.in

--- a/setup.py.in
+++ b/setup.py.in
@@ -12,7 +12,7 @@ setup(name="slip.dbus", version="@VERSION@",
         py_modules=["slip.dbus.__init__", "slip.dbus.bus",
             "slip.dbus.constants", "slip.dbus.mainloop", "slip.dbus.polkit",
             "slip.dbus.proxies", "slip.dbus.service"],
-        requires=["dbus", "decorator", "gobject"])
+        requires=["dbus", "decorator"])
 
 setup(name="slip.gtk", version="@VERSION@",
         py_modules=["slip.gtk.__init__", "slip.gtk.tools"],
