--- a/setup.py.in
+++ b/setup.py.in
@@ -13,8 +13,7 @@ setup(name="slip.dbus", version="@VERSION@",
             "slip.dbus.constants", "slip.dbus.introspection",
             "slip.dbus.mainloop", "slip.dbus.polkit", "slip.dbus.proxies",
             "slip.dbus.service"],
-        requires=["dbus", "decorator", "gobject", "StringIO",
-            "xml.etree.ElementTree"])
+        requires=["dbus", "decorator", "StringIO", "xml.etree.ElementTree"])
 
 setup(name="slip.gtk", version="@VERSION@",
         py_modules=["slip.gtk.__init__", "slip.gtk.tools"],
