--- a/setup.py.in
+++ b/setup.py.in
@@ -6,7 +6,7 @@ from distutils.core import setup
 setup(name="slip", version="@VERSION@",
         py_modules=["slip.__init__", "slip.util.__init__",
             "slip.util.hookable", "slip.util.files",
-            "slip._wrappers.__init__", "slip._wrappers._gobject"],
+            "slip._wrappers.__init__", "slip._wrappers._glib"],
         requires=["selinux"])
 
 setup(name="slip.dbus", version="@VERSION@",
